--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "contentful": "^9.1.19",
+    "dayjs": "^1.11.10",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
