--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.73.0",
     "contentful": "^9.1.19",
     "dayjs": "^1.11.10",
     "next": "12.1.4",
