--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sentry/nextjs": "^7.73.0",
     "contentful": "^9.1.19",
     "dayjs": "^1.11.10",
+    "jspdf": "^2.5.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
@@ -21,7 +22,7 @@
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "contentful-typescript-codegen": "^3.4.0",
+    "cf-content-types-generator": "^2.15.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
