--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "14.2.2",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "sass": "^1.72.0",
     "typescript": "5.4.5"
   }
