add education section

--- a/.env-example
+++ b/.env-example
@@ -3,5 +3,7 @@ CONTENTFUL_DELIVERYs_API_ACCESS_TOKEN=deli-qwerty
 CONTENTFUL_SPACE_ID=xyz
 CONTENTFUL_ENVIRONMENT=asd
 
+GTAG_CONFIG=qwe
+
 ORGANIZATION=org
 PROJECT=pro
