updage nextjs, small graphical improvements

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "contentful": "^10.8.3",
     "dayjs": "^1.11.10",
     "jspdf": "^2.5.1",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.2"
